k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance-service
  namespace: maintenance
spec:
  selector:
    app: maintenance-page
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
